<resources>
    <string name="app_name">Railway Disaster Preparedness</string>
    <string name="sms">SMS</string>
    <string name="call">CALL</string>
    <string name="email">E-MAIL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_id">269907623445928</string>
    <string name="google_maps_key">AIzaSyC16dWr6lT8Zo_dISxmevbSGP_Hg9l4DD0</string>
    <string name="action_settings">Settings</string>
    <string name="step1"> <b> STEP 1: </b> \n
       <b> Get help.</b> Call for emergency medical help or ask someone else nearby to do it while you begin caring for the injured person. Do this as soon as possible, so that help will quickly arrive. This is the key to survival for a severely injured person.\n
<b>•  If </b> you suspect the person has injuries that are causing internal bleeding, let medical help know when you call. There might be internal bleeding if you notice the person coughing up blood, vomiting, or bleeding from the ears, eyes, nose, or mouth. Any sudden bruising along with swelling of the back, abdomen, or an arm or leg are also further signs of internal bleeding.
</string>
    <string name="step2"> <b>STEP 2:  </b> \n
        Evaluate the injured person using the ABCDE mnemonic. ABCDE stands forAirways, Breathing, Circulation, Disability, and Exposure/Environment and serves as a reminder of the order in which you should evaluate the trauma of the injured person. Knowing the source of the trauma will help in deciding how to proceed with first aid as well as inform emergency personnel, such as 102 or 108 operators, to address the problem more accurately. \n
<b>•  Airways:</b> Check for obstructions to the injured person\'s airways. Is there a foreign object in the way? Are there external or internal fractures preventing airflow? \n
<b>•  Breathing:</b> Check if they are breathing. Is their chest rising and falling? Do they need additional oxygen? \n
<b>•  Circulation:</b> Check that the injured person has adequate blood circulation. Do they have a pulse? Are they conscious? \n
<b>•  Disability: </b> Check for signs of brain trauma. Are they conscious? Are their pupils dilated? \n
<b>•  Exposure/Environment:</b> Check to see if they are injured elsewhere or at further risk. Are they protected from cold or hot? Are they restricted by their own clothes or dangerous elements? \n
</string>
    <string name="step3"> <b> STEP 3:  </b> \n
        Make sure that there is no immediate danger of further injury. <b>Do not</b> move the injured person if you do not have to. However, if there is immediate danger of other injury (from traffic, falling objects, etc.), try to form a barrier, keeping the injured person and others safe, such as by directing traffic around an accident site. If you absolutely must move the injured person yourself, immobilize the wound site as best you can.</string>
    <string name="step4"> <b>STEP 4:  </b> \n
       <b> Wash </b> your  hands if possible. If you can, you\'ll want to sanitize your hands by washing them with soap and water. Put on surgical gloves as well, if they\'re available. This will not only protect you from the risk of getting diseases, but also prevent the injured person from becoming infected. \n
<b>•  Always </b> be careful when handling someone else\'s blood. Since blood can carry disease-causing pathogens, take steps to wash your hands and protect yourself.\n
<b>•  Never</b> re-use plastic or surgical gloves, since doing so can spread infection. \n
<b>•  If you </b> do not have disposable gloves, try using something like plastic wrap to put a barrier between your hands and the wound.
</string>
    <string name="step5"><b> STEP 5:  </b> \n
        <b> Clear </b> the wound site. If there is obvious dirt or debris in the wound, remove it if possible. However, do not try to remove large objects, or ones deeply embedded in the wound, since this can make bleeding worse. If you must leave an object in the wound, avoid pressing on it, as this may push it deeper into the wound.</string>
    <string name="step6"> <b> STEP 6: </b> \n
        <b> Apply pressure. </b> Use a sterile or clean cloth, bandage, or gauze and apply firm pressure directly on the site of the bleeding. Use your hands only if you have nothing else. Do not put pressure on an eye wound, or if there is an object embedded in the wound. \n
<b>•  Keep applying pressure </b> without removing the cloth to check on the bleeding. If you take the bandage off, you could disturb clots that are forming to stop the bleeding.
</string>
    <string name="step7"> <b> STEP 7: </b> \n
        <b> Secure the bandage.</b> You can fix the bandage in place with tape, gauze strips or whatever you have on hand, like a necktie or strip of cloth. Take care not to tie the strips too tightly, or you could cut off circulation.</string>
    <string name="step8"> <b> STEP 8: </b> \n
        <b>Elevate the wound. </b>If a bone does not appear to be broken, raise the wound site so that it is above the heart. For instance, if a leg is injured, raise it on a chair or place a pillow under it. Elevating the wound can keep blood from rushing to it and intensifying the bleeding.</string>
    <string name="text">
        We are providing information about first aids. The only thing you have to do is that you need to select the problem category.</string>
<string name="step13"><b>STEP 1: </b> \n
Apply pressure to a pressure point if the bleeding does not stop. A pressure point is a location where you can squeeze an artery against a bone, which can slow the flow of blood. There are two major pressure points on the body; choose the one nearest the site of the wound. \n
<b>•  If</b> the bleeding is near a leg, press and hold against the femoral artery in the groin, where the leg bends at the hip.\n
<b>•  If</b> the bleeding is near an arm, press and hold against the brachial artery, along the inside of the upper arm.
</string>
    <string name="step14"> <b> STEP 2: </b> \n
    Help the injured person lie down, if the injury permits. Cover the injured person with a blanket or similar material to keep in body heat. Resting the injured person can help prevent him or her from going into shock.</string>
    <string name="step15"><b> STEP 3: </b> \n
   <b> Apply</b> more dressing to the wound, if necessary. Don\'t remove the cloth covering the wound even if it soaks through with blood, as this can make the bleeding worse. You can place another layer of cloth or bandage over the soaked one. The important thing is to keep applying pressure. Apply more dressing to the wound, if necessary. Don\'t remove the cloth covering the wound even if it soaks through with blood, as this can make the bleeding worse. You can place another layer of cloth or bandage over the soaked one. The important thing is to keep applying pressure. </string>
    <string name="step16"><b>STEP 4: </b> \n
   <b> Use </b> a tourniquet only if you have proper training. If bleeding does not stop, even after prolonged pressure, you may need to make a tourniquet. Because there are severe dangers from incorrectly placing or applying a tourniquet, you should only use one if you\'ve been trained to do so. \n
<b> •  An </b> easy-to-use combat tourniquet is now available for civilian purchase. If you can get one, buy a Combat Application Tourniquet (CAT) and learn how to use it. \n
<b>•  When </b> paramedics or other help arrives, let them know how long the tourniquet has been in place. \n
</string>
    <string name="step17"> <b> STEP 5: </b> \n
   <b> Keep calm. </b>  Dealing with severe bleeding can be shocking and stressful. While you wait for medical help to arrive, calm yourself by focusing on the steps necessary to stop the bleeding. Calm the injured person by talking to him or her, and giving assurance that help is on the way.</string>
    <string name="step18"><b> STEP 6: </b> \n
   <b> Get </b> the injured person proper medical attention. If you\'re waiting for an ambulance, continue to stay with the injured person. Keep applying pressure to the wound. Or, if the bleeding has stopped and help is not on the way, try to get the injured person to the emergency room as quickly as you can. \n
<b> •  Remember, </b> if you must move the injured person yourself, immobilize the wound site. If possible, wait until after the bleeding has stopped to move the person.\n
<b> •  Don\'t remove </b> any bandages before taking the person to the emergency room. Removing them could cause bleeding to restart. \n
<b>•  If </b>the person is alert, ask about any medicine they are taking or any known medical problems, also any known drug allergies. This can keep them distracted while you wait for help and is important information you can then pass on to medical professionals.
</string>
    <string name="step25"><b>STEP 1: </b> \n
    Determine responsiveness. If a person is unconscious, try to rouse them by speaking to them; do not be afraid to speak up. If they do not respond to activity, sound, touch, or other stimulation, determine whether they are breathing.</string>
    <string name="step26"><b>STEP 2: </b> \n
        <b> Check</b> for breathing and a pulse. If unconscious and unable to be roused, check for breathing: look for a rise in the chest area; listen for the sound of air coming in and out; feel for air using the side of your face. If no signs of breathing are apparent, place two fingers under the chin and gently guide the face pointing upwards to open up their airways. If any debris such as vomit can be seen, it is appropriate to move them onto their side to allow it to get out, which is achieved with the recovery position.Check for a pulse.
</string>
    <string name="step27"><b>STEP 3: </b> \n

<b>If </b> the person remains unresponsive, prep for CPR. Unless you suspect a spinal injury, carefully roll them onto their back and open their airway. If you suspect a spinal injury, leave the person where they are, provided they are breathing.\n
<b>•  Keep</b>  the head and neck aligned. \n
<b>•  Carefully</b> roll them onto their back while holding their head. \n
<b>•  Open </b>the airway by lifting the chin. \n
</string>
    <string name="step28"><b>STEP 4: </b> \n
  <b>  Perform 30 </b> chest compressions and two rescue breaths as part of CPR. In the center of the chest, just below an imaginary line running between the nipples, put your two hands together and compress the chest down approximately 2 inches (5.1 cm) at a rate of 100 compressions per minute (or to the beat of "Staying Alive"). After 30 compressions, give two rescue breaths, done by opening the airways, closing the nose and fully covering the mouth hole. Then check vitals. If the breaths are blocked, reposition the airway. Make sure the head is tilted slightly back and the tongue is not obstructing it. Continue this cycle of 30 chest compressions and two rescue breaths until someone else relieves you</string>
    <string name="step29"><b>STEP 5: </b> \n
        <b>Remember</b> your ABCs of CPR. The ABCs of CPR refer to the three critical things you need to look for.Check these three things frequently as you give the person first aid CPR. \n
<b>•  Airway.</b> Does the person have an unobstructed airway? \n
<b>•  Breathing. </b>Is the person breathing? \n
<b>•  Circulation.</b> Does the person show a pulse at major pulse points (wrist, carotid artery, groin)?
</string>
</resources>