<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/a1"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/a1"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step1"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />
            <ImageView
                android:id="@+id/a2"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/a2"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step2"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/a3"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/a3"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step3"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/a4"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/a4"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step4"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal" />
            <ImageView
                android:id="@+id/a5"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/a5"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step5"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal" />
            <ImageView
                android:id="@+id/a6"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/a6"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step6"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step7"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step8"
                android:id="@+id/textView8"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>