<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/a1"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/capture9"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step25"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />
            <ImageView
                android:id="@+id/a2"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/capture10"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step26"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/a3"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/capture11"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step27"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step28"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/step29"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>